--- a/contrib/debian/bitchaind.service
+++ b/contrib/debian/bitchaind.service
@@ -1,23 +1,23 @@
 # It is not recommended to modify this file in-place, because it will
 # be overwritten during package upgrades. If you want to add further
 # options or overwrite existing ones then use
-# $ systemctl edit pivxd.service
+# $ systemctl edit bitchaind.service
 # See "man systemd.service" for details.
 
 # Note that almost all daemon options could be specified in
-# /etc/pivx/pivx.conf
+# /etc/bitchain/bitchain.conf
 
 [Unit]
-Description=PIVX daemon
+Description=BITCHAIN daemon
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/pivxd -daemon -datadir=/var/lib/pivx -conf=/etc/pivx/pivx.conf -pid=/run/pivxd/pivxd.pid
-# Creates /run/pivxd owned by pivx
-RuntimeDirectory=pivxd
-User=pivx
+ExecStart=/usr/bin/bitchaind -daemon -datadir=/var/lib/bitchain -conf=/etc/bitchain/bitchain.conf -pid=/run/bitchaind/bitchaind.pid
+# Creates /run/bitchaind owned by bitchain
+RuntimeDirectory=bitchaind
+User=bitchain
 Type=forking
-PIDFile=/run/pivxd/pivxd.pid
+PIDFile=/run/bitchaind/bitchaind.pid
 Restart=on-failure
 
 # Hardening measures
